--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-.bsp
+.bsp/
 ### IntelliJ IDEA ###
-.idea
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
